--- a/modules/users/client/views/settings/change-profile-picture.client.view.html
+++ b/modules/users/client/views/settings/change-profile-picture.client.view.html
@@ -1,4 +1,4 @@
-<md-content layout-padding>
+<md-content layout-margin>
   <form>
     <md-input-container class="md-block">
       <img ng-src="{{vm.imageURL}}" alt="{{vm.user.displayName}}" class="img-thumbnail user-profile-picture">
