--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -1,4 +1,4 @@
-<section>
+<section layout-margin>
   <div class="page-header">
     <h1>User <span ng-bind="vm.user.username"></span></h1>
   </div>
