--- a/modules/users/client/views/password/forgot-password.client.view.html
+++ b/modules/users/client/views/password/forgot-password.client.view.html
@@ -1,22 +1,24 @@
-<h3>Restore your password</h3>
-<p>Enter your account username.</p>
-<md-content layout-padding>
-  <form name="vm.forgotPasswordForm" ng-submit="vm.askForPasswordReset(vm.forgotPasswordForm.$valid)" class="form-horizontal" novalidate autocomplete="off">
-    <md-input-container class="md-block">
-      <label>User name</label>
-      <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username" lowercase required>
-      <div ng-messages="vm.forgotPasswordForm.username.$error" role="alert">
-        <div ng-message="required" class="error">Enter a username.</div>
+<section layout-margin>
+  <h3>Restore your password</h3>
+  <p>Enter your account username.</p>
+  <md-content layout-padding>
+    <form name="vm.forgotPasswordForm" ng-submit="vm.askForPasswordReset(vm.forgotPasswordForm.$valid)" class="form-horizontal" novalidate autocomplete="off">
+      <md-input-container class="md-block">
+        <label>User name</label>
+        <input type="text" id="username" name="username" class="form-control" ng-model="vm.credentials.username" lowercase required>
+        <div ng-messages="vm.forgotPasswordForm.username.$error" role="alert">
+          <div ng-message="required" class="error">Enter a username.</div>
+        </div>
+      </md-input-container>
+      <md-input-container class="md-block">
+        <md-button class="md-raised md-primary" type="submit">Submit</md-button>
+      </md-input-container>
+      <div ng-show="vm.error" class="text-center text-danger">
+        <strong ng-bind="vm.error"></strong>
       </div>
-    </md-input-container>
-    <md-input-container class="md-block">
-      <md-button class="md-raised md-primary" type="submit">Submit</md-button>
-    </md-input-container>
-    <div ng-show="vm.error" class="text-center text-danger">
-      <strong ng-bind="vm.error"></strong>
-    </div>
-    <div ng-show="vm.success" class="text-center text-success">
-      <strong ng-bind="vm.success"></strong>
-    </div>
-  </form>
-</md-content>
+      <div ng-show="vm.success" class="text-center text-success">
+        <strong ng-bind="vm.success"></strong>
+      </div>
+    </form>
+  </md-content>
+</section>
