--- a/modules/users/client/views/password/reset-password-success.client.view.html
+++ b/modules/users/client/views/password/reset-password-success.client.view.html
@@ -1,4 +1,4 @@
-<section class="row text-center">
+<section class="row text-center" layout-margin>
   <h3 class="col-md-12">Password successfully reset</h3>
   <a ui-sref="home" class="col-md-12">Continue to home page</a>
 </section>
