--- a/modules/users/client/views/password/reset-password.client.view.html
+++ b/modules/users/client/views/password/reset-password.client.view.html
@@ -1,36 +1,38 @@
-<h3>Reset your password</h3>
-<md-content layout-padding>
-  <form name="vm.resetPasswordForm" ng-submit="vm.resetUserPassword(vm.resetPasswordForm.$valid)" class="signin form-horizontal" novalidate autocomplete="off">
-    <md-input-container class="md-block">
-      <label for="newPassword">New Password</label>
-      <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="vm.passwordDetails.newPassword" autocomplete="new-password" password-validator required>
-      <div ng-messages="vm.resetPasswordForm.newPassword.$error" role="alert">
-        <div ng-message="required" class="error">Enter a new password.</div>
-        <div ng-repeat="passwordError in passwordErrors">
-          <div ng-show="vm.resetPasswordForm.newPassword.$error.requirements" class="error">{{passwordError}}</div>
+<section layout-margin>
+  <h3>Reset your password</h3>
+  <md-content layout-padding>
+    <form name="vm.resetPasswordForm" ng-submit="vm.resetUserPassword(vm.resetPasswordForm.$valid)" class="signin form-horizontal" novalidate autocomplete="off">
+      <md-input-container class="md-block">
+        <label for="newPassword">New Password</label>
+        <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="vm.passwordDetails.newPassword" autocomplete="new-password" password-validator required>
+        <div ng-messages="vm.resetPasswordForm.newPassword.$error" role="alert">
+          <div ng-message="required" class="error">Enter a new password.</div>
+          <div ng-repeat="passwordError in passwordErrors">
+            <div ng-show="vm.resetPasswordForm.newPassword.$error.requirements" class="error">{{passwordError}}</div>
+          </div>
         </div>
+      </md-input-container>
+      <md-input-container class="md-block">
+        <label for="verifyPassword">Verify Password</label>
+        <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="vm.passwordDetails.verifyPassword" password-verify="vm.passwordDetails.newPassword" required>
+        <div ng-messages="vm.resetPasswordForm.verifyPassword.$error" role="alert">
+          <div ng-message="required" class="error">Enter the password again to verify.</div>
+          <div ng-show="vm.resetPasswordForm.verifyPassword.$error.passwordVerify" class="error">Passwords do not match.</div>
+        </div>
+      </md-input-container>
+      <md-input-container class="md-block" ng-show="!vm.resetPasswordForm.newPassword.$error.required">
+        <label>Password Requirements</label>
+        <md-progress-linear value="{{requirementsProgress}}" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></md-progress-linear>
+      </md-input-container>
+      <md-input-container class="md-block">
+        <md-button class="md-raised md-primary" type="submit">Update Password</md-button>
+      </md-input-container>
+      <div ng-show="error" class="text-center text-danger">
+        <strong ng-bind="vm.error"></strong>
       </div>
-    </md-input-container>
-    <md-input-container class="md-block">
-      <label for="verifyPassword">Verify Password</label>
-      <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="vm.passwordDetails.verifyPassword" password-verify="vm.passwordDetails.newPassword" required>
-      <div ng-messages="vm.resetPasswordForm.verifyPassword.$error" role="alert">
-        <div ng-message="required" class="error">Enter the password again to verify.</div>
-        <div ng-show="vm.resetPasswordForm.verifyPassword.$error.passwordVerify" class="error">Passwords do not match.</div>
+      <div ng-show="success" class="text-center text-success">
+        <strong ng-bind="vm.success"></strong>
       </div>
-    </md-input-container>
-    <md-input-container class="md-block" ng-show="!vm.resetPasswordForm.newPassword.$error.required">
-      <label>Password Requirements</label>
-      <md-progress-linear value="{{requirementsProgress}}" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></md-progress-linear>
-    </md-input-container>
-    <md-input-container class="md-block">
-      <md-button class="md-raised md-primary" type="submit">Update Password</md-button>
-    </md-input-container>
-    <div ng-show="error" class="text-center text-danger">
-      <strong ng-bind="vm.error"></strong>
-    </div>
-    <div ng-show="success" class="text-center text-success">
-      <strong ng-bind="vm.success"></strong>
-    </div>
-  </form>
-</md-content>
+    </form>
+  </md-content>
+</section>
