--- a/modules/users/client/views/settings/change-password.client.view.html
+++ b/modules/users/client/views/settings/change-password.client.view.html
@@ -1,43 +1,44 @@
-
-<md-content layout-padding>
-  <form name="vm.passwordForm" ng-submit="vm.changeUserPassword(vm.passwordForm.$valid)" class="signin" novalidate autocomplete="off">
-    <md-input-container class="md-block">
-      <label for="currentPassword">Current Password</label>
-      <input type="password" id="currentPassword" name="currentPassword" class="form-control" ng-model="vm.passwordDetails.currentPassword" required>
-      <div ng-messages="vm.passwordForm.currentPassword.$error" role="alert">
-        <div ng-message="required" class="error">Your current password is required.</div>
-      </div>
-    </md-input-container>
-    <md-input-container class="md-block">
-      <label for="newPassword">New Password</label>
-      <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="vm.passwordDetails.newPassword" password-validator required>
-      <div ng-messages="vm.passwordForm.newPassword.$error" role="alert">
-        <div ng-message="required" class="error">Enter a new password.</div>
-        <div ng-repeat="passwordError in passwordErrors">
-          <div ng-show="vm.passwordForm.newPassword.$error.requirements" class="error">{{passwordError}}</div>
+<section layout-margin>
+  <md-content layout-padding>
+    <form name="vm.passwordForm" ng-submit="vm.changeUserPassword(vm.passwordForm.$valid)" class="signin" novalidate autocomplete="off">
+      <md-input-container class="md-block">
+        <label for="currentPassword">Current Password</label>
+        <input type="password" id="currentPassword" name="currentPassword" class="form-control" ng-model="vm.passwordDetails.currentPassword" required>
+        <div ng-messages="vm.passwordForm.currentPassword.$error" role="alert">
+          <div ng-message="required" class="error">Your current password is required.</div>
         </div>
+      </md-input-container>
+      <md-input-container class="md-block">
+        <label for="newPassword">New Password</label>
+        <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="vm.passwordDetails.newPassword" password-validator required>
+        <div ng-messages="vm.passwordForm.newPassword.$error" role="alert">
+          <div ng-message="required" class="error">Enter a new password.</div>
+          <div ng-repeat="passwordError in passwordErrors">
+            <div ng-show="vm.passwordForm.newPassword.$error.requirements" class="error">{{passwordError}}</div>
+          </div>
+        </div>
+      </md-input-container>
+      <md-input-container class="md-block">
+        <label for="verifyPassword">Verify Password</label>
+        <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="vm.passwordDetails.verifyPassword" password-verify="vm.passwordDetails.newPassword" required>
+        <div ng-messages="vm.passwordForm.verifyPassword.$error" role="alert">
+          <div ng-message="required" class="error">Verify your new password.</div>
+          <div ng-show="vm.passwordForm.verifyPassword.$error.passwordVerify" class="error">Passwords do not match.</div>
+        </div>
+      </md-input-container>
+      <md-input-container class="md-block" ng-show="!vm.passwordForm.newPassword.$error.required">
+        <label>Password Requirements</label>
+        <md-progress-linear value="{{requirementsProgress}}" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></md-progress-linear>
+      </md-input-container>
+      <md-input-container class="md-block">
+        <md-button class="md-raised md-primary" type="submit">Save Password</md-button>
+      </md-input-container>
+      <div ng-show="vm.success" class="text-center text-success">
+        <strong>Password Changed Successfully</strong>
       </div>
-    </md-input-container>
-    <md-input-container class="md-block">
-      <label for="verifyPassword">Verify Password</label>
-      <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="vm.passwordDetails.verifyPassword" password-verify="vm.passwordDetails.newPassword" required>
-      <div ng-messages="vm.passwordForm.verifyPassword.$error" role="alert">
-        <div ng-message="required" class="error">Verify your new password.</div>
-        <div ng-show="vm.passwordForm.verifyPassword.$error.passwordVerify" class="error">Passwords do not match.</div>
+      <div ng-show="vm.error" class="text-center text-danger">
+        <strong ng-bind="vm.error"></strong>
       </div>
-    </md-input-container>
-    <md-input-container class="md-block" ng-show="!vm.passwordForm.newPassword.$error.required">
-      <label>Password Requirements</label>
-      <md-progress-linear value="{{requirementsProgress}}" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></md-progress-linear>
-    </md-input-container>
-    <md-input-container class="md-block">
-      <md-button class="md-raised md-primary" type="submit">Save Password</md-button>
-    </md-input-container>
-    <div ng-show="vm.success" class="text-center text-success">
-      <strong>Password Changed Successfully</strong>
-    </div>
-    <div ng-show="vm.error" class="text-center text-danger">
-      <strong ng-bind="vm.error"></strong>
-    </div>
-  </form>
-</md-content>
+    </form>
+  </md-content>
+</section>
