--- a/modules/users/client/views/settings/edit-profile.client.view.html
+++ b/modules/users/client/views/settings/edit-profile.client.view.html
@@ -1,4 +1,4 @@
-<md-content layout-padding>
+<md-content layout-margin>
   <form name="vm.userForm" ng-submit="vm.updateUserProfile(vm.userForm.$valid)" class="signin" novalidate autocomplete="off">
     <md-input-container class="md-block">
       <label for="firstName">First Name</label>
