--- a/modules/workshops/client/views/view-workshop.client.view.html
+++ b/modules/workshops/client/views/view-workshop.client.view.html
@@ -1,23 +1,23 @@
-<section>
+<section layout-margin layout-padding>
   <div class="page-header">
-    <h1 ng-bind="vm.workshop.title"></h1>
+    <h1 ng-bind="vm.workshop.companyName"></h1>
   </div>
-  <div class="pull-right" ng-show="vm.workshop.isCurrentUserOwner">
-    <a class="btn btn-primary" ui-sref="workshops.edit({ workshopId: vm.workshop._id })">
-      <i class="glyphicon glyphicon-edit"></i>
-    </a>
-    <a class="btn btn-primary" ng-click="vm.remove()">
-      <i class="glyphicon glyphicon-trash"></i>
-    </a>
+  <p class="lead" ng-bind="vm.workshop.address"></p>
+  <p class="lead" ng-bind="vm.workshop.phoneNo"></p>
+  <p class="lead" ng-bind="vm.workshop.openingHours"></p>
+  <p class="lead" ng-bind="vm.workshop.description"></p>
+  <div flex layout="row" ng-show="vm.workshop.isCurrentUserOwner">
+    <md-button ui-sref="workshops.edit({ workshopId: vm.workshop._id })"
+               title="Edit"
+               aria-label="Edit"
+               class="md-icon-button">
+      <md-icon class="zmdi zmdi-edit"></md-icon>
+    </md-button>
+    <md-button ng-click="vm.remove()"
+               title="Edit"
+               aria-label="Edit"
+               class="md-icon-button">
+      <md-icon class="zmdi zmdi-delete"></md-icon>
+    </md-button>
   </div>
-  <small>
-    <em class="text-muted">
-      Posted on
-      <span ng-bind="vm.workshop.created | date:'mediumDate'"></span>
-      by
-      <span ng-if="vm.workshop.user" ng-bind="vm.workshop.user.displayName"></span>
-      <span ng-if="!vm.workshop.user">Deleted User</span>
-    </em>
-  </small>
-  <p class="lead" ng-bind="vm.workshop.content"></p>
 </section>
