--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -1,40 +1,37 @@
-<section layout-margin>
-  <div class="page-header">
-    <h1>User <span ng-bind="vm.user.username"></span></h1>
-  </div>
-  <div class="col-md-12">
-    <form name="vm.userForm" ng-submit="vm.update(vm.userForm.$valid)" novalidate>
-      <fieldset>
-        <div class="form-group" show-errors>
-          <label for="firstName">First Name</label>
-          <input type="text" id="firstName" name="firstName" class="form-control" ng-model="vm.user.firstName" placeholder="First Name" required />
-          <div ng-messages="vm.userForm.firstName.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">First name is required.</p>
+<section layout-margin layout-padding>
+  <h3>User</h3>
+  <p></p>
+  <form name="vm.userForm" ng-submit="vm.update(vm.userForm.$valid)" novalidate>
+    <form name="vm.form.workshopForm" class="form-horizontal" ng-submit="vm.save(vm.form.workshopForm.$valid)" novalidate>
+      <md-input-container class="md-block">
+        <label for="firstName">First Name</label>
+        <input type="text" id="firstName" name="firstName" class="form-control" ng-model="vm.user.firstName" placeholder="First Name" required />
+        <div ng-messages="vm.userForm.firstName.$error" role="alert">
+          <div ng-message="required">First name is required.</div>
+        </div>
+      </md-input-container>
+      <md-input-container class="md-block">
+        <label for="lastName">Last Name</label>
+        <input type="text" id="lastName" name="lastName" class="form-control" ng-model="vm.user.lastName" placeholder="Last Name" required />
+        <div ng-messages="vm.userForm.lastName.$error" role="alert">
+          <div ng-message="required">Last name is required.</div>
+        </div>
+      </md-input-container>
+      <md-input-container class="md-block">
+        <label class="control-label" for="roles">Roles</label>
+        <div class="controls">
+          <input class="form-control" type="text" name="roles" ng-model="vm.user.roles" id="roles" ng-list required />
+          <div ng-messages="vm.userForm.roles.$error" role="alert">
+            <div ng-message="required">At least one role is required.</div>
           </div>
         </div>
-        <div class="form-group" show-errors>
-          <label for="lastName">Last Name</label>
-          <input type="text" id="lastName" name="lastName" class="form-control" ng-model="vm.user.lastName" placeholder="Last Name" required />
-          <div ng-messages="vm.userForm.lastName.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Last name is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label class="control-label" for="roles">Roles</label>
-          <div class="controls">
-            <input class="form-control" type="text" name="roles" ng-model="vm.user.roles" id="roles" ng-list required />
-            <div ng-messages="vm.userForm.roles.$error" role="alert">
-              <p class="help-block error-text" ng-message="required">At least one role is required.</p>
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <input type="submit" value="Update" class="btn btn-default">
-        </div>
-        <div ng-show="vm.error" class="text-danger">
-          <strong ng-bind="vm.error"></strong>
-        </div>
-      </fieldset>
+      </md-input-container>
+      <md-input-container class="md-block">
+        <md-button class="md-raised md-primary" type="submit">Update</md-button>
+      </md-input-container>
+      <div ng-show="vm.error" class="text-danger">
+        <strong ng-bind="vm.error"></strong>
+      </div>
     </form>
-  </div>
+  </md-content>
 </section>
