--- a/modules/users/client/views/admin/view-user.client.view.html
+++ b/modules/users/client/views/admin/view-user.client.view.html
@@ -1,20 +1,25 @@
-<section layout-margin>
+<section layout-margin layout-padding>
   <div class="page-header">
     <div class="row">
       <div class="col-md-6">
         <h1 ng-bind="vm.user.username"></h1>
       </div>
-      <div class="col-md-4">
-        <a class="btn btn-primary" ui-sref="admin.user-edit({userId: vm.user._id})">
-          <i class="glyphicon glyphicon-edit"></i>
-        </a>
-        <a class="btn btn-primary" ng-click="vm.remove()" ng-if="vm.user._id !== vm.authentication.user._id">
-          <i class="glyphicon glyphicon-trash"></i>
-        </a>
+      <div flex layout="row">
+        <md-button ui-sref="admin.user-edit({userId: vm.user._id})"
+                   title="Edit"
+                   aria-label="Edit"
+                   class="md-icon-button">
+          <md-icon class="zmdi zmdi-edit"></md-icon>
+        </md-button>
+        <md-button ng-click="vm.remove()" ng-if="vm.user._id !== vm.authentication.user._id"
+                   title="Edit"
+                   aria-label="Edit"
+                   class="md-icon-button">
+          <md-icon class="zmdi zmdi-delete"></md-icon>
+        </md-button>
       </div>
     </div>
   </div>
-
   <div class="row">
     <div class="col-md-8">
       <div class="row">
