--- a/modules/carowners/client/views/view-carowner.client.view.html
+++ b/modules/carowners/client/views/view-carowner.client.view.html
@@ -1,23 +1,32 @@
-<section>
+<section layout-margin layout-padding>
   <div class="page-header">
-    <h1 ng-bind="vm.carowner.title"></h1>
+    <h2 ng-bind="vm.carowner.user.displayName"></h2>
   </div>
-  <div class="pull-right" ng-show="vm.carowner.isCurrentUserOwner">
-    <a class="btn btn-primary" ui-sref="carowners.edit({ carownerId: vm.carowner._id })">
-      <i class="glyphicon glyphicon-edit"></i>
-    </a>
-    <a class="btn btn-primary" ng-click="vm.remove()">
-      <i class="glyphicon glyphicon-trash"></i>
-    </a>
+  <div flex layout="row" ng-show="vm.carowner.isCurrentUserOwner">
+    <md-button ui-sref="carowners.edit({ carownerId: vm.carowner._id })"
+               title="Edit"
+               aria-label="Edit"
+               class="md-icon-button">
+      <md-icon class="zmdi zmdi-edit"></md-icon>
+    </md-button>
+    <md-button ng-click="vm.remove()"
+               title="Edit"
+               aria-label="Edit"
+               class="md-icon-button">
+      <md-icon class="zmdi zmdi-delete"></md-icon>
+    </md-button>
   </div>
-  <small>
-    <em class="text-muted">
-      Posted on
-      <span ng-bind="vm.carowner.created | date:'mediumDate'"></span>
-      by
-      <span ng-if="vm.carowner.user" ng-bind="vm.carowner.user.displayName"></span>
-      <span ng-if="!vm.carowner.user">Deleted User</span>
-    </em>
-  </small>
-  <p class="lead" ng-bind="vm.carowner.content"></p>
+  <h3>Additional Owner Details</h3>
+  <p class="lead" ng-bind="vm.carowner.address"></p>
+  <p class="lead" ng-bind="vm.carowner.dateOfBirth"></p>
+  <p class="lead" ng-bind="vm.carowner.placeOfBirth"></p>
+  <p class="lead" ng-bind="vm.carowner.gender"></p>
+  <h3>Additional Car Details</h3>
+  <p class="lead" ng-bind="vm.carowner.policeNo"></p>
+  <p class="lead" ng-bind="vm.carowner.stnkName"></p>
+  <p class="lead" ng-bind="vm.carowner.brand.brand"></p>
+  <p class="lead" ng-bind="vm.carowner.materialNo"></p>
+  <p class="lead" ng-bind="vm.carowner.manufactureYear"></p>
+  <p class="lead" ng-bind="vm.carowner.workshop.companyName"></p>
 </section>
+
