fix($app): fix cemacem

--- a/modules/brands/client/views/view-brand.client.view.html
+++ b/modules/brands/client/views/view-brand.client.view.html
@@ -10,5 +10,6 @@
       <i class="glyphicon glyphicon-trash"></i>
     </a>
   </div>
+  <h4>Description</h4>
   <p class="lead" ng-bind="vm.brand.description"></p>
 </section>
