--- a/modules/categories/client/views/view-category.client.view.html
+++ b/modules/categories/client/views/view-category.client.view.html
@@ -19,5 +19,6 @@
       <span ng-if="!vm.category.user">Deleted User</span>
     </em>
   </small>
+  <h4>Description</h4>
   <p class="lead" ng-bind="vm.category.description"></p>
 </section>
