--- a/modules/workshops/client/views/view-workshop.client.view.html
+++ b/modules/workshops/client/views/view-workshop.client.view.html
@@ -16,8 +16,12 @@
       <md-icon class="zmdi zmdi-delete"></md-icon>
     </md-button>
   </div>
+  <h4>Address</h4>
   <p class="lead" ng-bind="vm.workshop.address"></p>
+  <h4>Phone No</h4>
   <p class="lead" ng-bind="vm.workshop.phoneNo"></p>
+  <h4>Opening Hours</h4>
   <p class="lead" ng-bind="vm.workshop.openingHours"></p>
+  <h4>Description</h4>
   <p class="lead" ng-bind="vm.workshop.description"></p>
 </section>
